--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/JDA-withDependencies-2.0.0_242.jar"/>
+	<classpathentry kind="lib" path="C:/Users/simon/Desktop/Discord4J-2.6.1.zip"/>
+	<classpathentry kind="lib" path="C:/Users/simon/Desktop/JDA-withDependencies-2.2.1_353.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
